# tala-agent

./: .depConfig.yaml  .gitignore  .ruff.toml  Dockerfile  ci.yaml  component.yaml  dora.yaml  makefile  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml  dependabot.yaml  dependency-submission.yaml  pr-validator.yaml
api/: api-docs-v3.yaml
manifests/: kustomization.yaml
manifests/chart/tala-agent/: Chart.yaml  README.md  values.yaml
manifests/chart/tala-agent/templates/: manifest.yaml
manifests/chart/tala-agent/tests/: ci-values.yaml
manifests/chart/{{template-agent}}/: Chart.yaml  README.md  values.yaml
manifests/chart/{{template-agent}}/templates/: manifest.yaml
manifests/generators/: fullpath.yaml  helmchart.yaml  kustomization.yaml  searchreplacetag.yaml  values.yaml
scripts/: Readme.md  create-env-file.sh  create-sidecar-container.sh  fetch-keys.sh  start-interactive-mode.sh
swarm_configs/: swarm.yaml
tala_agent/: __main__.py  agent.py  app.py  exceptions.py
tala_agent/config/: __init__.py  config_handler.py  env_loader.py
tala_agent/tools/: __init__.py
tala_agent/utils/: retry.py
tests/component/tools/: test_greeting_tool.py
tests/unit/tools/: test_greeting_tool.py
{{template_agent}}/: __main__.py  agent.py  app.py
{{template_agent}}/config/: __init__.py  config_handler.py
{{template_agent}}/tools/: __init__.py
{{template_agent}}/tools/dummy_tools/: number_comparing_tool.py
